# Cmake

./: CMakeLists.txt  README.md
A/: preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: index_test.cpp  lib_test.cpp  main.cpp
